--- a/src/style.css
+++ b/src/style.css
@@ -94,3 +94,30 @@ nav a {
 nav a:hover {
     background-color: var(--color-hover);
 }
+
+@media (max-width: 768px) {
+    header {
+        width: min-content;
+        height: min-content;
+        padding: 10px 0;
+        border-radius: var(--border-radius);
+    }
+
+    nav.closed {
+        display: none;
+    }
+
+    nav {
+        flex-direction: column;
+        align-items: start;
+    }
+
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin: 10px 0;
+    }
+}
